--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
 
     /* Welcome Animation */
     #welcomeScreen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ff9c33;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  color: white;
-  font-family: 'Brush Script MT', cursive;
-  text-align: center;
-}
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ff9c33;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      color: white;
+      font-family: 'Brush Script MT', cursive;
+      text-align: center;
+    }
 
-#welcomeText {
-  font-size: 42px;
-  letter-spacing: 2px;
-  text-shadow: 0 0 10px white, 0 0 20px white;
-  max-width: 90%;
-}
+    #welcomeText {
+      font-size: 42px;
+      letter-spacing: 2px;
+      text-shadow: 0 0 10px white, 0 0 20px white;
+      max-width: 90%;
+    }
 
     .top-bar {
       background: #ff9c33;
@@ -287,28 +287,37 @@
     };
   </script>
 
-  <!-- Welcome Script -->
+  <!-- Welcome Animation Script (Only Once) -->
   <script>
-    const text = "Welcome to Tathaastu Events";
-    let i = 0;
-    const speed = 100;
-    const welcomeEl = document.getElementById("welcomeText");
+    window.addEventListener("load", () => {
+      const welcomeScreen = document.getElementById("welcomeScreen");
+      const welcomeText = document.getElementById("welcomeText");
 
-    function typeWriter() {
-      if (i < text.length) {
-        welcomeEl.innerHTML += text.charAt(i);
-        i++;
-        setTimeout(typeWriter, speed);
+      if (!localStorage.getItem("welcomeShown")) {
+        const text = "Welcome to Tathaastu Events!";
+        let i = 0;
+
+        function typeWriter() {
+          if (i < text.length) {
+            welcomeText.innerHTML += text.charAt(i);
+            i++;
+            setTimeout(typeWriter, 80);
+          } else {
+            setTimeout(() => {
+              welcomeScreen.style.opacity = "0";
+              setTimeout(() => {
+                welcomeScreen.style.display = "none";
+              }, 1000);
+              localStorage.setItem("welcomeShown", "true");
+            }, 1500);
+          }
+        }
+
+        typeWriter();
       } else {
-        setTimeout(() => {
-          document.getElementById("welcomeScreen").style.display = "none";
-        }, 1800);
+        welcomeScreen.style.display = "none";
       }
-    }
-
-    window.onload = function () {
-      typeWriter();
-    };
+    });
   </script>
 
 </body>
